# cs1440-assn5

./: .gitignore  CMakeLists.txt  City.cpp  City.h  County.cpp  County.h  CountyUserInterface.cpp  CountyUserInterface.h  Nation.cpp  NationUserInterface.cpp  NationUserInterface.h  README.md  Region.cpp  Region.h  State.cpp  State.h  StateUserInterface.cpp  StateUserInterface.h  Test.txt  UserInterface.cpp  UserInterface.h  WorldUserInterface.cpp  WorldUserInterface.h  main.cpp
AnalystComparer/: CMakeLists.txt  Comparer.cpp  Utils.cpp  main.cpp
Bingo/: CMakeLists.txt  Deck.cpp  Deck.h  main.cpp
Bingo/Testing/: MenuOptionTester.cpp  MenuTester.cpp  testMain.cpp
Examples/Division/: CMakeLists.txt  main.cpp
Examples/DynamicArrays/: CMakeLists.txt  main.cpp
Examples/FarmOperations/: Animal.cpp  Animal.h  CMakeLists.txt  Chicken.cpp  Chicken.h  Cow.cpp  Cow.h  Farm Operations.vpp  Farm.cpp  Farm.h  FarmAnimal.cpp  FarmAnimal.h  Menu.cpp  Menu.h  MenuOption.h  Pet.cpp  Pet.h  Pig.cpp  Pig.h  Sheep.cpp  Sheep.h  UserInterface.cpp  UserInterface.h  Utils.cpp  Utils.h  YearMonth.cpp  YearMonth.h  farm1.txt  farm2.txt  main.cpp  testFarm.txt
Examples/FarmOperations/Testing/: ChickenTester.cpp  ChickenTester.h  CowTester.cpp  CowTester.h  FarmTester.cpp  FarmTester.h  PetTester.cpp  PetTester.h  PigTester.cpp  PigTester.h  SheepTester.cpp  SheepTester.h  YearMonthTester.cpp  YearMonthTester.h  testMain.cpp
Examples/FormattedTable/: CMakeLists.txt  ColumnDefinition.cpp  ColumnDefinition.h  FormattedCell.cpp  FormattedCell.h  FormattedRow.cpp  FormattedRow.h  FormattedTable.cpp  FormattedTable.h  main.cpp
Examples/FormattedTable/Data/: Example1.txt  FormattedExample1.txt
Examples/GpaAnalyzer/GpaAnalyzer-V1-Bad/: CMakeLists.txt  CourseSections.csv  Registrations.csv  Students.csv  main.cpp  readme.md
Examples/GpaAnalyzer/GpaAnalyzer-V2-Better/: CMakeLists.txt  CourseSection.cpp  CourseSection.h  Registration.cpp  Registration.h  Student.cpp  Student.h  main.cpp  readme.md
Examples/MemoryExamples/: CMakeLists.txt  main.cpp
Examples/OpeningFilesExample/: CMakeLists.txt  main.cpp
Examples/OpeningFilesExample/Data/: TestData.txt
Examples/PizzeriaOrderTracking/: SimplifiedPizzeriaExample-ProblemDescription.docx
Examples/Pointers/: CMakeLists.txt  main.cpp
Examples/ProgramArguments/: CMakeLists.txt  main.cpp
Examples/SimpleTemplates/: CMakeLists.txt  MaxFunctions.cpp  MaxFunctions.h  MaxTemplate.h  main.cpp
Examples/TemplateContainer/: CMakeLists.txt  Container.h  Gadget.cpp  Gadget.h  Widget.cpp  Widget.h  main.cpp
Examples/TestingExample/: Utils.h  main.cpp
Examples/TestingExample/Testing/: testMain.cpp
GeoRegions/: GeoRegions-Design.vpp  Region.cpp  Region.h  State.cpp  UserInterface.cpp  main.cpp
GeoRegions/Testing/: RegionTester.cpp  testMain.cpp
Testing/: RegionTester.cpp  testMain.cpp
TestingExample/: CMakeLists.txt
Triangles/: CMakeLists.txt  Edge.cpp  Point.cpp  Triangle.cpp  Utils.cpp  Utils.h
Triangles/Testing/: PointTester.cpp  TriangleTester.cpp  UtilsTester.cpp  UtilsTester.h  testMain.cpp
backup-given-code/: City.cpp  City.h  County.cpp  County.h  Region.cpp  Region.h  State.h  main.cpp
testExample/: Utils.cpp
testExample/Testing/: UtilsTester.cpp  UtilsTester.h  testMain.cpp
(+19 files in other folders)
